@@ -1,3 +1,7 @@
+2003-11-20 nalin
+	* src/init.c: instead of forcing the realm when parsing principals,
+	make realm= set the default realm.
+
 2003-11-19 nalin
 	* src/v5.c(v5_get_creds): use the realm from the unparsed version of
 	the principal name when constructing service principals.
